// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render option correctly: option render 1`] = `
<Option
  data={
    Object {
      "value": "test",
    }
  }
/>
`;

exports[`should render value correctly: value render 1`] = `
<SingleValue
  data={
    Object {
      "value": "test",
    }
  }
/>
`;
